# firefront

./: .dockerignore  .gitignore  ArrayDataLayer.h  AtmosphericData.cpp  Balbi2015.cpp  Balbi2015.h  Balbi2020.cpp  Balbi2020.h  BalbiNov2011.cpp  BalbiNov2011.h  BalbiNov2011Curv.cpp  BalbiNov2011TMdMl.cpp  BalbiUnsteady.cpp  BurningMap.cpp  BurningMap.h  BurningMapLayer.h  BurningRatioLayer.h  BurnupHeatFluxModel.cpp  CLibForeFire.cpp  CLibForeFire.h  CMakeLists.txt  Command.cpp  Command.h  CommandShell.cpp  CommandShell.h  CraterHeatFluxModel.h  CraterSO2FluxModel.cpp  CraterSO2FluxModel.h  CraterVaporFluxModel.cpp  DataBroker.cpp  DataBroker.h  DataLayer.h  Dockerfile  EventCommand.cpp  EventCommand.h  FDCell.cpp  FDCell.h  FFArrays.h  FFConstants.h  FFEvent.cpp  (+88 more)
.github/workflows/: main.yml
Examples/aullene/: aullene.ff  fuels.ff
cmakebuild/: CMakeCache.txt  Makefile  cmake_install.cmake
doc/: coupledMNHInstall.md
doc/buildSystems/: readme.MD
docker_tools/: docker-run.sh
examples/: .gitignore
examples/aullene/: aullene.ff  aullene2.ff
py3_tools/: ForeFirepy3.py  coord_to_ff.py  ff2geojson.py  landscape_eda.ipynb  old_ff2geojson.py  plotcontour.py  requirements.txt
py3_tools/forefirepy/: ForeFire.py  ff2geojson.py  landscape_gen_funcs.py
src/: ANN.h  ANNPropagationModel.cpp  ArrayDataLayer.h  AtmosphericData.cpp  AtmosphericData.h  BMapLoggerForANNTraining.cpp  Balbi2015.cpp  Balbi2020.cpp  Balbi2020.h  BalbiNov2011.cpp  BalbiNov2011Curv.cpp  BalbiNov2011Curv.h  BalbiNov2011TMdMl.cpp  BalbiNov2011TMdMl.h  BalbiUnsteady.cpp  BalbiUnsteady.h  BurningMap.cpp  BurningMap.h  BurnupHeatFluxModel.cpp  BurnupHeatFluxModel.h  CLibForeFire.cpp  CLibForeFire.h  Command.cpp  Command.h  CommandShell.cpp  CommandShell.h  CraterHeatFluxModel.cpp  CraterHeatFluxModel.h  CraterSO2FluxModel.cpp  CraterSO2FluxModel.h  CraterVaporFluxModel.cpp  CraterVaporFluxModel.h  CurvatureDrivenPropagationModel.cpp  DataBroker.cpp  DataBroker.h  DataLayer.h  EventCommand.cpp  EventCommand.h  FDCell.cpp  FDCell.h  (+90 more)
src/include/: Version.h
swig/: Makefile  PLibForeFire.cpp  PLibForeFire.h  PLibForeFire.i  Sconstruct  test.py
tests/: ANNTest.cpp
tools/: MNHCDF2Case.py  NCfile.py  PARALLELMNH2SINGLEVTKhalo2.py  README.md  Sconstruct  TODO.md  barbaggio.py  ffToGeoJson.py  genForeFireCase.py  makeColormapH.py  makefile  prealCF2Case.py  sampleUses.py  simpleExample_HeatFluxFromobsModel.py
(+73 files in other folders)
